--- a/News_Portal/templates/News_Portal/main.html
+++ b/News_Portal/templates/News_Portal/main.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title> Order board</title>
 </head>
 <body>
-$END$
+  <div>
+    <h1><a href="/">Order board</a></h1>
+  </div>
+  <div>
+    <button>
+      <a href="{% url 'new_order'%}"> Добавить заказ </a>
+    </button>
+  </div>
+{% block content %}
+{% endblock %}
 </body>
 </html>
