--- a/News_Portal/templates/News_Portal/tags_tpl.html
+++ b/News_Portal/templates/News_Portal/tags_tpl.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="tags">
+    <h2 class="sidebar-title">Tags</h2>
+    {% for tag in tags %}
+    <p><a href="{{ tag.get_absolute_url }}">{{ tag.title }}</a></p>
+    {% endfor %}
+</div>
