--- a/static/style.css
+++ b/static/style.css
@@ -750,3 +750,7 @@ section.blog-post-area h4 span.author-name {
     font-size: 15px;
     font-weight: 500;
 }
+.grid .portfolio-item img{
+    weight: 100px;
+    height: auto;
+}
