--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,20 @@
         {% include 'inc/_header.html' %}
         {% endcache %}
 
+        {% if messages %}
+        {% for message in messages %}
+            {% if message.tags == 'error' %}
+                <div class="alert alert-danger" role="alert">
+                    {{ message }}
+                </div>
+            {% else %}
+                <div class="alert alert-{{ message.tags }}" role="alert">
+                    {{ message }}
+                </div>
+            {% endif %}
+        {% endfor %}
+        {% endif %}
+
         {% block content %}{% endblock %}
         {% cache 20 footer %}
         {% include 'inc/_footer.html' %}
