--- a/templates/inc/_header.html
+++ b/templates/inc/_header.html
@@ -7,6 +7,10 @@
     {% else %}
         <a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}">Login</a>
     {% endif %}
+    <ul class="nav nav-pills">
+      <li class="nav-item"><a class="nav-link.active" href="#">Главная</a></li>
+      <li class="nav-item"><a class="nav-link" href="edit_page">Создание/ред/удал</a></li>
+    </ul>
   </span>
   <div class="container">
     <div class="row">
