--- a/News_Portal/templates/News_Portal/single.html
+++ b/News_Portal/templates/News_Portal/single.html
@@ -33,92 +33,32 @@
                                     {{ post.content|safe }}
                                 </div>
                             </div>
-                            <div class="ads-area">
-                                <img src="img/ads.jpg" alt="">
-                                <p>Your Ad Banner Goes Here</p>
-                            </div>
                             <div class="commententries">
-                                <h3>Comments</h3>
+                                <p>Дата создания</p>
+                                <p>комментарии</p>
+                                <hr>
+                                <p>добавить комментарий: {{ post_article.create_date }}</p>
+                                <p>Название: {{ post_article_name }}</p>
+                                <p>Текст: {{ post_article_text }}</p>
+                                {% if messages %}
+                                <div class="alert alert-success">
+                                    {% for m in messages %}
+                                    {{ m }}
+                                    {% endfor %}
+                                </div>
+                                {% endif %}
 
-                                <ul class="commentlist">
-                                    <li>
-                                        <article class="comment">
-                                            <header class="comment-author">
-                                                <img src="img/author-1.jpg" alt="">
-                                            </header>
-                                            <section class="comment-details">
-                                                <div class="author-name">
-                                                    <h5><a href="#">Selina Gomez</a></h5>
-                                                    <p>February 25 2017</p>
-                                                </div>
-                                                <div class="comment-body">
-                                                    <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard </p>
-                                                </div>
-                                                <div class="reply">
-                                                    <p><span><a href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i></a>12</span><span><a href="#"><i class="fa fa-reply" aria-hidden="true"></i></a>7</span></p>
-                                                </div>
-                                            </section>
-                                        </article>
+                                {{ post_article.comments_articles.all }}
 
-                                        <ul class="children">
-                                            <li>
-                                                <article class="comment">
-                                                    <header class="comment-author">
-                                                        <img src="img/author-2.jpg" alt="">
-                                                    </header>
-                                                    <section class="comment-details">
-                                                        <div class="author-name">
-                                                            <h5><a href="#">Khalid Hasan Zibon</a></h5>
-                                                            <p>February 25 2017</p>
-                                                        </div>
-                                                        <div class="comment-body">
-                                                            <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard </p>
-                                                        </div>
-                                                        <div class="reply">
-                                                            <p><span><a href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i></a>12</span><span><a href="#"><i class="fa fa-reply" aria-hidden="true"></i></a>7</span></p>
-                                                        </div>
-                                                    </section>
-                                                </article>
-                                            </li>
-                                        </ul>
-
-                                    </li>
-                                    <li>
-                                        <article class="comment">
-                                            <header class="comment-author">
-                                                <img src="img/author-3.jpg" alt="">
-                                            </header>
-                                            <section class="comment-details">
-                                                <div class="author-name">
-                                                    <h5><a href="#">Heath Ledger</a></h5>
-                                                    <p>February 25 2017</p>
-                                                </div>
-                                                <div class="comment-body">
-                                                    <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard </p>
-                                                </div>
-                                                <div class="reply">
-                                                    <p><span><a href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i></a>12</span><span><a href="#"><i class="fa fa-reply" aria-hidden="true"></i></a>7</span></p>
-                                                </div>
-                                            </section>
-                                        </article>
-                                    </li>
-                                </ul>
-
+                                <div class="col-md-4">
+                                    <form action="" id="add_form" method="post">
+                                        {% csrf_token %}
+                                            {{ form.as_p }}
+                                    </form>
+                                    <button form="add_form" type="submit" class="btn btn-primary">Добавить</button>
+                                </div>
                             </div>
-                            <form action="#" method="get">
-                                <div class="name">
-                                    <input type="text" name="" placeholder="Name" class="name">
-                                </div>
-                                <div class="email">
-                                    <input type="email" name="" placeholder="Email" class="email">
-                                </div>
-                                <div class="comment">
-                                    <input type="text" name="" placeholder="Comment" class="comment">
-                                </div>
-                                <div class="post">
-                                    <input type="submit" value="Post">
-                                </div>
-                            </form>
+
                         </div>
                     </div>
                     <div class="col-md-4">
